force-app/main/default/objects/Site_Visit_Report__c/Site_Visit_Report__c.object-meta.xml
<CustomObject>
    <label>Site Visit Report</label>
    <nameField>
        <displayFormat>SVR-{0000}</displayFormat>
        <label>Site Visit Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Visit Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>