force-app/main/default/objects/Site_Visit_Report__c/fields/Client_Approval__c.field-meta.xml
<CustomField>
    <fullName>Client_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Approval</label>
    <type>Checkbox</type>
</CustomField>