force-app/main/default/objects/Site_Visit_Report__c/fields/Estimated_Budget_Description__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Budget_Description__c</fullName>
    <inlineHelpText>It display the total estimated budget explanation by supervisor.</inlineHelpText>
    <label>Estimated Budget Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>