force-app/main/default/objects/Site_Visit_Report__c/fields/Estimated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Date__c</fullName>
    <label>Estimated Completion Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>