force-app/main/default/objects/Site_Visit_Report__c/fields/Estimated_Completion_Months__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Months__c</fullName>
    <label>Estimated Completion Months</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>2 Months</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>4 Months</fullName>
            </value>
            <value>
                <fullName>5 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>7 Months</fullName>
            </value>
            <value>
                <fullName>8 Months</fullName>
            </value>
            <value>
                <fullName>9 Months</fullName>
            </value>
            <value>
                <fullName>10 Months</fullName>
            </value>
            <value>
                <fullName>11 Months</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>1 Year 1 Month</fullName>
            </value>
            <value>
                <fullName>1 Year 2 Month</fullName>
            </value>
            <value>
                <fullName>1 Year 3 Month</fullName>
            </value>
            <value>
                <fullName>1 Year 4 Month</fullName>
            </value>
            <value>
                <fullName>1 Year 5 Month</fullName>
            </value>
            <value>
                <fullName>1 Year 6 Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>