force-app/main/default/objects/Site_Visit_Report__c/fields/Is_Final_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Is_Final_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Optional final submit flag</description>
    <label>Is Final Submitted</label>
    <type>Checkbox</type>
</CustomField>