force-app/main/default/objects/Site_Visit_Report__c/fields/Layout_Blueprint_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Layout_Blueprint_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Layout/Blueprint Uploaded</label>
    <type>Checkbox</type>
</CustomField>