force-app/main/default/objects/Site_Visit_Report__c/fields/Management_Approval__c.field-meta.xml
<CustomField>
    <fullName>Management_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Management Approval</label>
    <type>Checkbox</type>
</CustomField>