force-app/main/default/objects/Site_Visit_Report__c/fields/Negotation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Negotation_Reason__c</fullName>
    <inlineHelpText>Manager Negotation Reason</inlineHelpText>
    <label>Negotation Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>