force-app/main/default/objects/Site_Visit_Report__c/fields/Negotiate__c.field-meta.xml
<CustomField>
    <fullName>Negotiate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Manager Negotiation.</inlineHelpText>
    <label>Negotiate</label>
    <type>Checkbox</type>
</CustomField>