force-app/main/default/objects/Site_Visit_Report__c/fields/Project_Stage__c.field-meta.xml
<CustomField>
    <fullName>Project_Stage__c</fullName>
    <label>Project Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>