force-app/main/default/objects/Site_Visit_Report__c/fields/Rooms_Count__c.field-meta.xml
<CustomField>
    <fullName>Rooms_Count__c</fullName>
    <description>Mention Rooms Count here like Manager cabin-1, Lunch Room-1, HR Room-1,....</description>
    <inlineHelpText>Mention Rooms Count here like Manager cabin-1, Lunch Room-1, HR Room-1,....</inlineHelpText>
    <label>Rooms Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>