force-app/main/default/objects/Site_Visit_Report__c/fields/Site_Area_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Site_Area_Sq_Ft__c</fullName>
    <description>Total area.</description>
    <inlineHelpText>Total area.</inlineHelpText>
    <label>Site Area (Sq Ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>