force-app/main/default/objects/Site_Visit_Report__c/fields/Site_Visit_Report_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Report_Status__c</fullName>
    <label>Site Visit Report Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Negotiable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>