force-app/main/default/objects/Site_Visit_Report__c/fields/Site_Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Type__c</fullName>
    <label>Site Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Re-Design</fullName>
            </value>
            <value>
                <fullName>Re-Budget</fullName>
            </value>
            <value>
                <fullName>Re Visit Follow up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>