force-app/main/default/objects/Site_Visit_Report__c/fields/Supervisor_User__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor User</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$UserRole.Name</field>
            <operation>equals</operation>
            <value>Supervisor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Site_Visit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>