force-app/main/default/objects/Site_Visit_Report__c/fields/Usable_Area_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Usable_Area_Sq_Ft__c</fullName>
    <label>Usable Area (Sq Ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>