force-app/main/default/objects/Site_Visit_Report__c/fields/Wizard_Step__c.field-meta.xml
<CustomField>
    <fullName>Wizard_Step__c</fullName>
    <description>This is for Track last completed step in the site visit report fill component</description>
    <label>Wizard Step</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>