force-app/main/default/objects/Site_Visit_Report__c/recordTypes/Lead_Site_Visit_Report.recordType-meta.xml
<RecordType>
    <fullName>Lead_Site_Visit_Report</fullName>
    <active>true</active>
    <description>It is Used to create Site Visit Report at Lead level.</description>
    <label>Lead Site Visit Report</label>
</RecordType>