force-app/main/default/objects/Site_Visit_Report__c/recordTypes/Opportunity_Site_Visit_Report.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Site_Visit_Report</fullName>
    <active>true</active>
    <description>It is Used to create Site Visit Report at Opportunity level.</description>
    <label>Opportunity Site Visit Report</label>
</RecordType>