force-app/main/default/objects/Site_Visit_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Supervisor_User__c</columns>
    <columns>Site_Visit_Report_Status__c</columns>
    <columns>Client_Approval__c</columns>
    <columns>Management_Approval__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>